# Opdracht-4-Sockets

./: README.md
client/: CMakeLists.txt  main.c
deel1/client/: CMakeLists.txt
deel1/server/: CMakeLists.txt  main.c
deel2/: CMakeLists.txt  http_server.c  index.html
server/: CMakeLists.txt  main.c
tlpi-dist/: oldfilelist.txt
tlpi-dist/acl/: acl_update  acl_view
tlpi-dist/altio/: demo_sigio  epoll_flags_fork  epoll_input  multithread_epoll_wait  poll_pipes  select_mq  self_pipe  t_select
tlpi-dist/cap/: cap_launcher  cap_text  check_password_caps  demo_file_caps  show_secbits  t_cap_get_file  t_cap_get_pid  t_cap_set_file
tlpi-dist/daemons/: daemon_SIGHUP  t_syslog  test_become_daemon
tlpi-dist/dirs_links/: bad_symlink  file_type_stats  list_files  list_files_readdir_r  nftw_dir_tree  t_dirbasename  t_unlink  view_symlink
tlpi-dist/filebuff/: direct_read  mix23_linebuff  mix23io  write_bytes  write_bytes_fdatasync  write_bytes_fsync  write_bytes_o_sync
tlpi-dist/fileio/: atomic_append  bad_exclusive_open  copy  copy_filehole2.c  large_file  multi_descriptors  seek_io  seek_io2  t_readv  t_truncate
tlpi-dist/filelock/: i_fcntl_locking  t_flock
tlpi-dist/files/: chiflag  t_chown  t_stat  t_umask  t_utime  t_utimes
tlpi-dist/filesys/: t_mount  t_statfs  t_statvfs  t_umount
tlpi-dist/getopt/: t_getopt
tlpi-dist/inotify/: demo_inotify  dnotify  inotify_dtree  rand_dtree
tlpi-dist/loginacct/: dump_utmpx  utmpx_login  view_lastlog
tlpi-dist/memalloc/: free_and_sbrk
tlpi-dist/mmap/: anon_mmap  mmcat  mmcopy  t_mmap  t_remap_file_pages
(+208 files in other folders)
